--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,7 +80,7 @@ font-size: 18px;
   color: #FFF;
   border: 1px solid transparent;
 }
-#search-form button:hover {
+#search-form button:hover, #form-box button:hover{
   background-color: #FFF;
   color: #F03E3E;
   border-color: #F03E3E;
@@ -150,4 +150,49 @@ background-color: #FFF7CC;
 
 .new-job .new-job-label{
   display: block;
+}
+
+/* add page */
+#add-form-container{
+  margin-top:100px;
+}
+
+#form-box {
+padding: 50px;
+box-shadow: 0 1px 5px rgba(0,0,0,.15);
+border-radius: 4px;
+background-color: #FFF;
+margin-bottom: 50px;
+}
+
+#add-form-container h1{
+  margin-bottom:20px;
+ }
+#add-form-container h2{
+ color:#F03E3E;
+ font-weight: bold;
+ font-size: 24px;
+ margin-bottom:30px;
+}
+
+#add-form-container label {
+  font-weight: bold;
+}
+
+#add-form-container input, #add-form-container textarea {
+  border: 2px solid #CCC;
+  background-color: #F8F9FA;
+}
+
+#form-box button{
+  height: 50px;
+  width: 200px;
+  background-color:#F03E3E;
+  border: 1px solid transparent;
+  border-radius: 0;
+  margin-top:20px;
+}
+
+#form-itens{
+  padding: 10px;
 }
