--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
    <div id="top-container" class="container-fluid">
       <h1 id="main-title" class="text-center">Encontre o emprego dos seus sonhos!</h1>
       <p id="main-subtitle" class="text-center">Somos o site com mais vagas de tecnologia no mercado, direcionadas a home-office.</p>
-      <form action="" id="search-form" class="form-inline">
+      <form action="/" id="search-form" class="form-inline" method="get">
         <div class="d-flex justify-content-between">
         <div class="form-group col-md-10 mb-2" >
           <input type="text" class="form-control" id="job" name="job" placeholder="Digite a vaga que está buscando">
@@ -16,7 +16,11 @@
      <div id="jobs-container" class="container">
       <div class="row">
         <div class="col-md-12">
+          {{#if search}}
+          <h2 id="job-list-title">Buscando vagas que contem: {{search}}</h2>
+          {{else}}
           <h2 id="job-list-title">Veja as nossas vagas em destaque</h2>
+          {{/if}}
           <ul id="job-list" class="list-group">
             {{#each jobs}}
             <li class="list-group-item {{#if dataValues.new_job}}new-job{{/if}}">
