--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,13 +23,13 @@
           {{/if}}
           <ul id="job-list" class="list-group">
             {{#each jobs}}
-            <li class="list-group-item {{#if dataValues.new_job}}new-job{{/if}}">
+            <li class="list-group-item {{#if dataValues.newjob}}new-job{{/if}}">
               <img src="/img/company.svg" alt="Company">
               <p>{{dataValues.company}}</p>
               <h2>{{dataValues.title}}</h2>
               <p>{{dataValues.salary}}</p>
               <span class="new-job-label">Nova</span>
-              <a href="" class="btn btn-primary">Ver Vaga</a>
+              <a href="/jobs/view/{{dataValues.id}}" class="btn btn-primary">Ver Vaga</a>
             </li>
             {{/each}}
           </ul>
