responsive-pages-complete

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,7 +27,7 @@
               <img src="/img/company.svg" alt="Company">
               <p>{{dataValues.company}}</p>
               <h2>{{dataValues.title}}</h2>
-              <p>{{dataValues.salary}}</p>
+              <p>R${{dataValues.salary}}</p>
               <span class="new-job-label">Nova</span>
               <a href="/jobs/view/{{dataValues.id}}" class="btn btn-primary">Ver Vaga</a>
             </li>
