--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -248,3 +248,83 @@ margin-bottom: 50px;
 #back{
   width:100px;
 }
+
+
+/* responsive */
+@media(max-width: 481px){
+  /*navbar*/
+  #navbarNav{
+    text-align: center;
+  }
+
+  /* home  */
+  #top-container{
+    padding: 50px;
+    padding-top: 100px;
+  }
+  
+  #main-title{
+    font-size: 2.2rem;
+  }
+  
+  #main-subtitle {
+    font-size: 1.5rem;
+  }
+
+ #search-form {
+  padding: 0;
+ }
+ 
+ #jobs-container{
+  padding: 20px;
+ }
+
+ .list-group-item{
+  padding: 15px 85px;
+ }
+  
+ .list-group-item h2{
+  font-size: 1.2rem;
+  width: 80%;
+ }
+
+.list-group-item img {
+  width: 50px;
+  left: 15px;
+  top: calc(50% -25px);
+}
+
+.new-job .new-job-label{
+  display: none;
+}
+
+/* job-view */
+
+.back-link {
+  margim-left: 30 px;
+}
+#job-view-container p {
+  font-size: 1.3rem;
+}
+.job-desc {
+  width: 80%;
+}
+
+/*add view */
+#form-box{
+  padding: 25px;
+  text-align: center;
+}
+#form-box button{
+  width: 100%;
+}
+
+}
+@media(max-width: 996px){
+  .new-job .new-job-label{
+    display: none;
+  }
+
+
+
+}
