--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -32,8 +32,7 @@
                 name="description"
                 placeholder="Descreva as atividades do desenvolvedor"
                 required
-              >
-              </textarea>
+              ></textarea>
             </div>
             <div class="form-group" id="form-itens">
               <label for="company">Empresa contratante:</label>
